hphp/hack/test/typecheck/sealed/warning_sealed/sealed_subtype2.php.exp
WARN: File "sealed_subtype2.php", line 6, characters 3-10:
Class `B` in sealed allowlist for `I`, but does not implement `I` (Warn[12035])
ERROR: File "sealed_subtype2.php", line 3, characters 1-101:
Values in sealed allowlist must be classname constants. (Parsing[1002])
