hphp/hack/test/typecheck/sealed/warning_sealed/sealed_subtype2.php
<?hh

<<__Sealed(
  A::class,
  2, // this is a parse error
  B::class // error, I is not a parent of B
)>>
interface I {}

class A implements I {}
class B {}
